@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19970211
+MANIFEST for ded, version t19970907
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for DED
